Fix Placement
Titles were not aligned on certain browsers. Used flex box to centre
everything.

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,7 @@ html, body{
 .full {
     height: 100%;
     background-size: cover;
-    background-attachment: fixed;
     position: relative;
-    position: relative;
-	   -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-        box-sizing: border-box;
 }
 }
 
@@ -44,10 +39,6 @@ h1, h2, h3, h4 {
   padding: 0px;
 }
 
-.highlight {
-  background-color: yellow;
-  padding: 2px;
-}
 
 
 /*** Sections ***/
@@ -55,7 +46,7 @@ h1, h2, h3, h4 {
 #one {
   background-color: white;
   background-size: cover;
-  height: 90%;
+  height: 100%;
   width: 100%;
   color: black;
   font-size: 60px;
@@ -83,13 +74,14 @@ h1, h2, h3, h4 {
   font-family: 'Roboto Slab', serif;
   height: 100%;
   width: 100%;
-  color: black;
-  justify-content: center;
-  display: flex;;
-  align-items: center;
 }
 
-#three {}
+#three {
+  height: 100%;
+  color: black;
+  text-align: center;
+
+}
 
 #four {}
 
@@ -105,7 +97,7 @@ h1, h2, h3, h4 {
   font-weight: 100;
   display: flex;
   justify-content: center;
-  align-self: right;
+  align-self: center;
 }
 
 
@@ -292,14 +284,23 @@ h1, h2, h3, h4 {
 
 /*** Quotes ***/
 
+.facts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 li {
 font-family: 'Roboto Slab', serif;
 font-weight: 100;
 }
 
 .content-slider {
-  width: 50%;
+  width: 100%;
   height: 200px;
+  display: flex;
+  justify-content: center;
+  text-align: left;
 }
 
 .slider {
